// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evaluatePolicy - 8-fixture matrix under 3 policies (snapshots) > findings under the default policy 1`] = `
[
  {
    "evidenceUrl": "https://github.com/siuying/react-native-htmltext",
    "message": "The GitHub repository for react-native-htmltext is archived (read-only): no fixes or releases will land. Replace it or pin a fork. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-htmltext, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-htmltext",
    "rule": "githubArchived",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-htmltext",
    "message": "react-native-htmltext is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-htmltext, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-htmltext",
    "rule": "directoryUnmaintained",
    "severity": "warn",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-markdown",
    "message": "react-native-markdown does not support the React Native New Architecture (RN Directory verdict: unsupported). Look for a maintained alternative or check the repo for New Architecture plans. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-markdown, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-markdown",
    "rule": "newArchitecture",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-markdown",
    "message": "react-native-markdown is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-markdown, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-markdown",
    "rule": "directoryUnmaintained",
    "severity": "warn",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-ab",
    "message": "New Architecture support for react-native-ab is unknown: it is not listed in the RN Directory and its npm package has no codegen hints. Verify support manually (check the repo README/releases). If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-ab, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-ab",
    "rule": "newArchUnknown",
    "severity": "warn",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-ab",
    "message": "react-native-ab is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-ab, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-ab",
    "rule": "directoryUnmaintained",
    "severity": "warn",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-legacy-bridge",
    "message": "react-native-legacy-bridge does not support the React Native New Architecture (RN Directory verdict: unsupported). Look for a maintained alternative or check the repo for New Architecture plans. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-legacy-bridge, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-legacy-bridge",
    "rule": "newArchitecture",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/react-native-legacy-bridge",
    "message": "react-native-legacy-bridge was last published 29 months ago (2024-01-15), exceeding the 24-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-legacy-bridge, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-legacy-bridge",
    "rule": "lastPublish",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/my-rn-codegen-package",
    "message": "my-rn-codegen-package is not listed in the RN Directory, but its npm package ships a codegenConfig, which indicates New Architecture support. Treating as a pass; verify manually if this dependency is critical.",
    "package": "my-rn-codegen-package",
    "rule": "newArchitecture",
    "severity": "note",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/my-rn-codegen-package",
    "message": "my-rn-codegen-package was last published 25 months ago (2024-06-01), exceeding the 24-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: my-rn-codegen-package, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "my-rn-codegen-package",
    "rule": "lastPublish",
    "severity": "error",
    "suppressedBy": null,
  },
]
`;

exports[`evaluatePolicy - 8-fixture matrix under 3 policies (snapshots) > findings under the lenient-with-allowlist policy 1`] = `
[
  {
    "evidenceUrl": "https://github.com/siuying/react-native-htmltext",
    "message": "The GitHub repository for react-native-htmltext is archived (read-only): no fixes or releases will land. Replace it or pin a fork. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-htmltext, reason: "<why>", expires: YYYY-MM-DD }. NOTE: the allowlist entry for react-native-htmltext ("fork planned Q3 2025") expired on 2026-01-01 - escalated to error. Renew the entry with a new expiry, or remove the dependency.",
    "package": "react-native-htmltext",
    "rule": "githubArchived",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-htmltext",
    "message": "react-native-htmltext is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-htmltext, reason: "<why>", expires: YYYY-MM-DD }. NOTE: the allowlist entry for react-native-htmltext ("fork planned Q3 2025") expired on 2026-01-01 - escalated to error. Renew the entry with a new expiry, or remove the dependency.",
    "package": "react-native-htmltext",
    "rule": "directoryUnmaintained",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-markdown",
    "message": "react-native-markdown does not support the React Native New Architecture (RN Directory verdict: unsupported). Look for a maintained alternative or check the repo for New Architecture plans. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-markdown, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-markdown",
    "rule": "newArchitecture",
    "severity": "warn",
    "suppressedBy": {
      "expires": "2026-12-31",
      "reason": "migration planned Q4 2026",
    },
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-markdown",
    "message": "react-native-markdown is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-markdown, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-markdown",
    "rule": "directoryUnmaintained",
    "severity": "warn",
    "suppressedBy": {
      "expires": "2026-12-31",
      "reason": "migration planned Q4 2026",
    },
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-ab",
    "message": "react-native-ab is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-ab, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-ab",
    "rule": "directoryUnmaintained",
    "severity": "warn",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-legacy-bridge",
    "message": "react-native-legacy-bridge does not support the React Native New Architecture (RN Directory verdict: unsupported). Look for a maintained alternative or check the repo for New Architecture plans. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-legacy-bridge, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-legacy-bridge",
    "rule": "newArchitecture",
    "severity": "warn",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/react-native-legacy-bridge",
    "message": "react-native-legacy-bridge was last published 29 months ago (2024-01-15), exceeding the 24-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-legacy-bridge, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-legacy-bridge",
    "rule": "lastPublish",
    "severity": "warn",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/my-rn-codegen-package",
    "message": "my-rn-codegen-package is not listed in the RN Directory, but its npm package ships a codegenConfig, which indicates New Architecture support. Treating as a pass; verify manually if this dependency is critical.",
    "package": "my-rn-codegen-package",
    "rule": "newArchitecture",
    "severity": "note",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/my-rn-codegen-package",
    "message": "my-rn-codegen-package was last published 25 months ago (2024-06-01), exceeding the 24-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: my-rn-codegen-package, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "my-rn-codegen-package",
    "rule": "lastPublish",
    "severity": "warn",
    "suppressedBy": null,
  },
]
`;

exports[`evaluatePolicy - 8-fixture matrix under 3 policies (snapshots) > findings under the strict-all-deps policy 1`] = `
[
  {
    "evidenceUrl": "https://reactnative.directory/?search=request",
    "message": "New Architecture support for request is unknown: it is not listed in the RN Directory and its npm package has no codegen hints. Verify support manually (check the repo README/releases). If this is intentional, allowlist it in .rn-doctor.yml: { package: request, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "request",
    "rule": "newArchUnknown",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/request",
    "message": "request was last published 35 months ago (2023-08-08), exceeding the 12-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: request, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "request",
    "rule": "lastPublish",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/request",
    "message": "request is deprecated on npm: "request has been deprecated, see https://github.com/request/request/issues/3142". Follow the deprecation notice to migrate. If this is intentional, allowlist it in .rn-doctor.yml: { package: request, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "request",
    "rule": "npmDeprecated",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://github.com/siuying/react-native-htmltext",
    "message": "The GitHub repository for react-native-htmltext is archived (read-only): no fixes or releases will land. Replace it or pin a fork. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-htmltext, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-htmltext",
    "rule": "githubArchived",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-htmltext",
    "message": "react-native-htmltext is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-htmltext, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-htmltext",
    "rule": "directoryUnmaintained",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-markdown",
    "message": "react-native-markdown does not support the React Native New Architecture (RN Directory verdict: unsupported). Look for a maintained alternative or check the repo for New Architecture plans. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-markdown, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-markdown",
    "rule": "newArchitecture",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-markdown",
    "message": "react-native-markdown is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-markdown, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-markdown",
    "rule": "directoryUnmaintained",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-ab",
    "message": "New Architecture support for react-native-ab is unknown: it is not listed in the RN Directory and its npm package has no codegen hints. Verify support manually (check the repo README/releases). If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-ab, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-ab",
    "rule": "newArchUnknown",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-ab",
    "message": "react-native-ab is flagged as unmaintained in the RN Directory. Plan a migration to a maintained alternative. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-ab, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-ab",
    "rule": "directoryUnmaintained",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=react-native-legacy-bridge",
    "message": "react-native-legacy-bridge does not support the React Native New Architecture (RN Directory verdict: unsupported). Look for a maintained alternative or check the repo for New Architecture plans. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-legacy-bridge, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-legacy-bridge",
    "rule": "newArchitecture",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/react-native-legacy-bridge",
    "message": "react-native-legacy-bridge was last published 29 months ago (2024-01-15), exceeding the 12-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: react-native-legacy-bridge, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "react-native-legacy-bridge",
    "rule": "lastPublish",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/my-rn-codegen-package",
    "message": "my-rn-codegen-package is not listed in the RN Directory, but its npm package ships a codegenConfig, which indicates New Architecture support. Treating as a pass; verify manually if this dependency is critical.",
    "package": "my-rn-codegen-package",
    "rule": "newArchitecture",
    "severity": "note",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/my-rn-codegen-package",
    "message": "my-rn-codegen-package was last published 25 months ago (2024-06-01), exceeding the 12-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: my-rn-codegen-package, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "my-rn-codegen-package",
    "rule": "lastPublish",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://reactnative.directory/?search=left-pad",
    "message": "New Architecture support for left-pad is unknown: it is not listed in the RN Directory and its npm package has no codegen hints. Verify support manually (check the repo README/releases). If this is intentional, allowlist it in .rn-doctor.yml: { package: left-pad, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "left-pad",
    "rule": "newArchUnknown",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/left-pad",
    "message": "left-pad was last published 112 months ago (2017-02-20), exceeding the 12-month threshold. Check whether it is abandoned; consider a maintained fork, or let renovate surface a replacement. If this is intentional, allowlist it in .rn-doctor.yml: { package: left-pad, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "left-pad",
    "rule": "lastPublish",
    "severity": "error",
    "suppressedBy": null,
  },
  {
    "evidenceUrl": "https://www.npmjs.com/package/left-pad",
    "message": "left-pad is deprecated on npm: "use String.prototype.padStart()". Follow the deprecation notice to migrate. If this is intentional, allowlist it in .rn-doctor.yml: { package: left-pad, reason: "<why>", expires: YYYY-MM-DD }.",
    "package": "left-pad",
    "rule": "npmDeprecated",
    "severity": "error",
    "suppressedBy": null,
  },
]
`;
